
- command-line switch -B can be set to alternate backends.
  The default is '-Bperl5:Pugs::Emitter::Perl6::Perl5'.
  '-Bperl5' also invokes the default backend.
- added a version banner - perl lib/v6.pm -v
- eval() in caller's context

[devel only]

- moved Perl5 emitter to a separate module
- implemented $$/
- implemented :c and :g switches in rules:
  ' my $content = "xyz"; while $content ~~ m:c/<alpha>/ { say $/ } '
  x \n y \n z \n
- implemented  '$x.yaml'  and  'eval( $x, :lang<yaml> )'

0.015  2006-09-14

- improved command-line interface, does not require using v6.pm as a
  script.
- MANIFEST only includes passing tests
- reuse Rule and Pod grammar from Pugs::Compiler::Rule
  - These grammars are now implemented using v6.pm.
  - The Rule grammar is subclassed, in order to callback P6 parser to
  compile closures.
- improved quoted text parsing
- gradually replace Text::Balanced with plain rules
  - Term::substitution() and rx_body() are the last remaining places.
- experimental implementation of compile-time objects
  - lib/Pugs/Emitter/Perl6/Perl5/
  - not merged yet - see misc/pX/fglock

0.014  2006-08-21

- optimized CPU usage (2x less) and RAM usage (3x less)

- implemented given/when/default/break/continue
- state variables
- implemented additional Array and Hash methods
- $?PUGS_BACKEND returns 'BACKEND_PERL5'
- implemented @*INC, $?OS, $?COMPILER, $?VERSION
- implemented statement terminator block

- fixed scientific notation
- fixed '{}' (empty hash)
- %hash = ( { a => 1 }, { b => 2 } ) works
- 'my' works inside '//' and 'err'
- optimized match object insideout in Pugs::Compiler::Rule
- optimized operator-precedence parser (Parse::Yapp) initialization

0.013  2006-08-09

- includes precompiled v6 modules: Perl6Prelude.pm, Test.pm
- new grammatical categories: 'quote', 'statement_modifier'

0.012  2006-08-08

- faster compilation due to improved grammatical categories dispatching
  and lazy rule compilation